--- a/template/Operations/alertRecord.html
+++ b/template/Operations/alertRecord.html
@@ -18,26 +18,7 @@
     <div>
     {% include "Operations/navbar.html" %}
     </div>
-    <div class="search-box">
-        <form action="">
-            {% csrf_token %}
-            <select name="" id="">
-                <option value="">Docking Date</option>
-                <option value="">Un Docking Date</option>
-            </select>
-            <label for="from-date">From Date</label>
-            <input type="date" name="from-date" title="From Date">
-            <label for="to-date">To Date</label>
-            <input type="date" name="to-date" title="To date">
-            <button type="submit" class="searchBtn">Search</button>
-        </form>
-    </div>
-    <div class="table-pagination">
-        <a href="{{month.0}}">{{month.0}}</a>
-        {{month.1}}
-        <a href="{{month.2}}">{{month.2}}</a>
-    </div>
-    <div class="table-container">
+        <div class="table-container">
         <table class="table align-middle mb-0 bg-white">
             <thead class="bg-light">
               <tr>
@@ -68,10 +49,7 @@
                     {% else %} pass{% endif %}
                 </td> -->
                 <td>
-                  <span {% if data.status == 'success'%}class = "badge-success badge rounded-pill d-inline">Sucess</span>
-                    {%else%} {% if data.reminder_date > today %}class = 'badge-primary badge rounded-pill d-inline'>Active</span>
-                    {%elif data.reminder_date <= today and data.status != 'success' %}class = 'badge-warning badge rounded-pill d-inline'>Alert</span>
-                    {% else %} pass{% endif %}{% endif %}
+                  <span class = 'badge-warning badge rounded-pill d-inline'>Alert</span>
                 </td>
                 <td>{{data.docking_date}}</td>
                 <td>
@@ -81,7 +59,7 @@
                     <p class="fw-normal mb-1">{{data.reminder_date}}</p>
                 </td>  
                 <td>
-                  <button type="button" id="editBtn" class="btn btn-link btn-sm btn-rounded" {% if data.status == 'success' %}disabled{% endif %}>
+                  <button type="button" onclick="success({{data.id}})" id="editBtn" class="btn btn-link btn-sm btn-rounded" {% if data.status == 'success' %}disabled{% endif %}>
                     Success
                   </button>
                   <button type="button" onclick="editRecord({{data.id}})" class="btn btn-link btn-sm btn-rounded">
@@ -101,6 +79,9 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js">
     </script>
     <script>
+        function success(id) {
+            window.location.href = `success${id}`;
+        }
         function editRecord(id) {
             window.location.href = `editRecord${id}`
         }
